--- a/store/style10.css
+++ b/store/style10.css
@@ -1602,20 +1602,550 @@ ul, ul.menu, ol.menu, ul.blank, .our-member .respl-item .info-member ul, .why-li
 
 .infos-footer .phone::before{
     font-family: 'FontAwesome';
-    content: "\f025";
+    content: "\f095";
     font-size: 20px;
     position: absolute;
     top: 158px;
     right: 0;
 
 }
-/* .infos-footer .phone::before{
+.infos-footer .timer::before{
+    font-family: 'FontAwesome';
+    content: "\f017";
+    font-size: 20px;
+    position: absolute;
+    top: 230px;
+    right: 0;
+}
+.infos-footer .adres::before{
+    font-family: 'FontAwesome';
+    content: "\f124";
+    font-size: 20px;
+    position: absolute;
+    top: 88px;
+    right: 0;
+}
+.infos-footer .mail::before{
     font-family: 'FontAwesome';
     content: "\f025";
-    font-size: 15px;
+    font-size: 20px;
     position: absolute;
-    top: 195px;
+    top: 188px;
     right: 0;
+}
 
 
-} */
+
+.typefooter-1 .footer-bottom {
+    text-align: center;
+    color: #fff;
+    padding-top: 40px;
+
+}
+.typefooter-1 .copyright-w {
+    background-color: #232f3e;
+    margin-top: 45px;
+    padding: 15px 0;
+}
+body.layout-2 .container, body.layout-1 .container {
+    max-width: 1650px;
+    padding: 0;
+    width: 93%;
+}
+footer .copyright a {
+    color: #ff3c20 !important;
+}
+
+
+
+
+
+
+
+
+
+.so-demos-preview-wrapper {
+    position: relative;
+    z-index: 1190;
+}
+a.buy-demo {
+    position: fixed;
+    bottom: 80px;
+    left: 40px;
+    background-color: #101010;
+    color: white;
+    font-size: 14px;
+    padding: 12px 20px 12px 16px;
+    border-radius: 35px;
+    line-height: 1;
+    z-index: 379;
+}
+a.buy-demo svg {
+    display: inline-block;
+    animation: rotateinfinite 15s ease-in-out infinite;
+}
+a.buy-demo > svg, a.buy-demo > span {
+    vertical-align: middle;
+}
+a.buy-demo svg {
+    fill: #81b441;
+    width: 20px;
+    height: 20px;
+    margin-right: 7px;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+}
+svg:not(:root) {
+    overflow: hidden;
+}
+a.buy-demo:hover svg {
+    fill: white;
+}
+.common-home a.buy-demo:hover, a.buy-demo:hover {
+    color: white;
+    background-color: #7dbd2d;
+}
+a.buy-demo > svg, a.buy-demo > span {
+    vertical-align: middle;
+}
+.so-show-demos-preview:hover {
+    background: black;
+}
+.so-show-demos-preview {
+    top: 70% !important;
+}
+.so-show-demos-preview {
+    position: fixed;
+    top: 75%;
+    right: 0;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    overflow: hidden;
+    height: 65px;
+    line-height: 65px;
+    width: 65px;
+    background-color: rgba(0, 0, 0, 0.85);
+    transition: transform 0.3s ease 0.4s, background-color 0.25s ease;
+    backface-visibility: hidden;
+    perspective: 800px;
+}
+.so-show-demos:hover .so-text-demo {
+    color: rgba(255, 255, 255, 0.2);
+    visibility: hidden;
+}
+.so-show-demos-preview .so-text-demo {
+    display: block;
+    position: relative;
+    color: white;
+    font-weight: 900;
+    z-index: 2;
+}
+
+.so-show-demos:hover .so-text-demo {
+
+    color: rgba(255, 255, 255, 0.2);
+    visibility: hidden;
+
+}
+.so-show-demos-preview .so-text-demo {
+
+    display: block;
+    position: relative;
+    color: white;
+    font-weight: 900;
+    z-index: 2;
+
+}
+.so-show-demos-preview {
+
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    line-height: 65px;
+
+}
+.so-show-demos:hover .so-demo-count {
+
+    color: rgba(255, 255, 255, 0.8);
+
+}
+.so-show-demos-preview .so-demo-count {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 65px;
+    line-height: 65px;
+    width: 65px;
+    font-size: 42px;
+    font-weight: 600;
+    color: rgba(255, 255, 255, 0.1);
+}
+.so-demos-preview {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+        overflow-x: auto;
+    overflow-x: hidden;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background: rgba(255, 255, 255, 1);
+    backface-visibility: hidden;
+    perspective: 800px;
+    transform: translateY(100%) translateZ(0);
+    transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
+}
+.so-demos-tab-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+.so-demos-tab-wrapper .so-demos-preview-info {
+    text-align: center;
+    flex: 0 0 auto;
+    margin-bottom: 25px;
+}
+.so-demos-preview-info .so-demos-animation-inner {
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+.so-demos-preview-title {
+    position: relative;
+    color: #252525;
+    font-size: 48px;
+    font-weight: 700;
+    letter-spacing: -0.8px;
+    margin-bottom: 0;
+}
+.so-demos-preview-info .so-demos-animation-inner:last-child {
+    margin-bottom: 0;
+}
+.so-demos-preview-info .so-demos-animation-inner {
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+.so-demos-preview-text {
+    font-size: 110%;
+    margin-bottom: 0;
+}
+p {
+    margin: 0 0 10px;
+        margin-bottom: 10px;
+}
+.so-demo-tabs {
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+}
+.so-preview-loader {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1002;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+.so-preview-loader::after {
+    content: "";
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    vertical-align: middle;
+    border: 1px solid #bbb;
+        border-left-color: rgb(187, 187, 187);
+    border-left-color: black;
+    border-radius: 50%;
+}
+.modal.fade {
+    visibility: visible;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+}
+.modal-content {
+    box-shadow: none;
+    border-radius: 0;
+    border: none;
+}
+.modal-content .modal-header {
+    padding: 10px 15px;
+}
+.modal-content .modal-title {
+    font-weight: normal;
+}
+
+
+
+
+
+
+
+
+
+#content .so-groups-sticky.right {
+    left: 0;
+    left: auto;
+}
+#content .so-groups-sticky {
+    width: 40px;
+}
+#content .so-groups-sticky {
+    background-color: #ff3c20;
+}
+div.so-groups-sticky.right {
+    z-index: 650;
+}
+.so-groups-sticky.right {
+    position: fixed;
+    left: 0;
+    z-index: 999;
+    background: #f60;
+        background-color: rgb(255, 102, 0);
+    width: 50px;
+}
+#so-groups > a {
+    position: relative;
+    height: 43px;
+}
+#so-groups > a {
+    float: left;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+    border-bottom: 1px solid rgba(255,255,255,.5);
+    padding: 10px;
+    height: 43px;
+    position: relative;
+}
+#content #so-groups > a span {
+    background-color: #ff3c20;
+}
+#so-groups > a span {
+    background-color: #ff3c20;
+    color: #fff;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 22px;
+    opacity: 0;
+    padding: 10px;
+    position: absolute;
+    left: 100%;
+    text-align: center;
+    text-transform: capitalize;
+    top: 0;
+    transition: all 0.2s ease-in-out 0s;
+    visibility: hidden;
+    white-space: nowrap;
+    width: auto;
+}
+#so-groups i.fa {
+    text-align: center;
+    color: white;
+}
+#so-groups > a > i {
+    font-size: 20px;
+}
+#so-groups > a {
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+}
+#so-groups > a {
+    position: relative;
+    height: 43px;
+}
+#content #so-groups > a span {
+    background-color: #ff3c20;
+}
+#so-groups > a:hover span {
+    opacity: 1;
+    transition: all 0.2s ease-in-out 0s;
+    visibility: visible;
+    width: auto;
+}
+#content #so-groups > a:hover {
+    background-color: #ec1e00;
+}
+#so-groups > a:hover {
+    background-color: #ec3a01;
+}
+#so-groups i.fa {
+    text-align: center;
+}
+#so-groups > a > i {
+    font-size: 20px;
+}
+
+.fa-shopping-cart::before {
+
+    content: "\f07a";
+
+}
+.fa-user::before {
+    content: "\f007";
+}
+.fa-align-justify::before {
+    content: "\f039";
+}
+.fa-search::before {
+    content: "\f002";
+}
+.fa-recent::before {
+    content: "\f06e";
+}
+
+#so-groups > a {
+    position: relative;
+    height: 43px;
+}
+#so-groups i.fa-recent {
+    background: url('../images/icon-recent.png') no-repeat;
+    width: 23px;
+    height: 10px;
+    display: inline-block;
+    margin-left: 6px;
+
+}
+.fa-angle-double-up::before {
+    content: "\f102";
+}
+#so-groups .popup-hidden {
+    opacity: 0;
+    top: -100%;
+    bottom: 100%;
+}
+#so-groups .popup {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    opacity: 1;
+    background: rgba(0,0,0,.6);
+}
+#so-groups .popup-screen {
+    display: table;
+    vertical-align: top;
+    width: 100%;
+    height: 100%;
+}
+#so-groups .popup-position {
+    padding: 40px;
+}
+#so-groups .popup-position {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+}
+
+
+
+.so-fb-message-style-default .so-fb-message-head:hover {
+    background-color: #3b5998;
+}
+.so-fb-message-style-default .so-fb-message-head {
+    height: 30px;
+    line-height: 30px;
+    padding: 0 5px;
+}
+.so-fb-message-style-default .so-fb-message-head {
+    background-color: #4267b2;
+    border: 1px solid #29487d;
+    cursor: pointer;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    color: #fff;
+    font-family: IRANSans, sans-serif;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    height: 29px;
+    padding: 5px;
+    position: relative;
+    padding-bottom: 30px;
+}
+.so-fb-message .online {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.fb_reset {
+    background: none;
+    border: 0;
+    border-spacing: 0;
+    color: #000;
+    cursor: auto;
+    direction: ltr;
+    font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+    font-size: 11px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    letter-spacing: normal;
+    line-height: 1;
+    margin: 0;
+    overflow: visible;
+    padding: 0;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0;
+    text-shadow: none;
+    text-transform: none;
+    visibility: visible;
+    white-space: normal;
+    word-spacing: normal;
+}
+.fb_reset > div {
+    overflow: hidden;
+}
+.so-fb-message.right-bottom {
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    z-index: 9999;
+}
+
+
+
+
+
