--- a/store/style10.css
+++ b/store/style10.css
@@ -1926,8 +1926,8 @@ div.so-groups-sticky.right {
     position: fixed;
     left: 0;
     z-index: 999;
-    background: #f60;
-        background-color: rgb(255, 102, 0);
+    background: #ff3c20;
+        background-color: #ff3c20;
     width: 50px;
 }
 #so-groups > a {
