--- a/store/style9.css
+++ b/store/style9.css
@@ -741,7 +741,7 @@ box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
 }
 #cssmenu ul {
     position: relative;
-    z-index: 597;
+    z-index: 10000;
     float: right;
 }
 #cssmenu ul, #cssmenu ul li, #cssmenu ul ul {
@@ -781,6 +781,164 @@ box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
 #cssmenu > ul > li a:hover {
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.15);
 }
+
+
+
+
+#cssmenu ul li {
+    float: none;
+}
+#cssmenu ul li {
+    float: left;
+    min-height: 1px;
+    line-height: 1em;
+    vertical-align: middle;
+    position: relative;
+}
+#cssmenu ul, #cssmenu ul li, #cssmenu ul ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+#cssmenu li {
+    position: relative;
+}
+#cssmenu > ul > li > a {
+    border-right: 4px solid #fff;
+    color: #ff3c20;
+    margin-top: 0;
+}
+#cssmenu a {
+    margin-top: 0;
+}
+#cssmenu a {
+    display: block;
+    padding: 15px 20px;
+    color: #ff3c20;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+#cssmenu ul li {
+    line-height: 1em;
+}
+#cssmenu ul ul {
+    border: 1px solid #666;
+}
+#cssmenu ul ul {
+    -webkit-border-radius: 0 3px 3px 0;
+    -moz-border-radius: 0 3px 3px 0;
+    border-radius: 0 3px 3px 0;
+}
+#cssmenu ul ul {
+    width: 700px;
+}
+#cssmenu ul ul {
+    top: 0;
+    right: 99%;
+}
+#cssmenu ul ul {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 99%;
+    z-index: 598;
+    width: 100%;
+}
+#cssmenu ul, #cssmenu ul li, #cssmenu ul ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+#cssmenu ul {
+    position: relative;
+    z-index: 597;
+    float: right;
+}
+#cssmenu ul ul li {
+    border-bottom: 1px solid #eee;
+}
+#cssmenu ul ul li {
+    font-weight: normal;
+}
+#cssmenu ul ul li {
+    float: none;
+}
+#cssmenu ul li {
+    float: none;
+}
+#cssmenu ul li {
+    float: left;
+    min-height: 1px;
+    line-height: 1em;
+    vertical-align: middle;
+    position: relative;
+}
+#cssmenu ul, #cssmenu ul li, #cssmenu ul ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+#cssmenu ul ul a {
+    font-size: 12px;
+    color: #666;
+}
+#cssmenu ul ul a:hover{
+    color:#ff3c20;
+}
+#cssmenu a {
+    margin-top: 0;
+}
+#cssmenu a {
+    display: block;
+    padding: 15px 20px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+#cssmenu ul ul li {
+    font-weight: normal;
+}
+#cssmenu ul ul {
+    visibility: hidden;
+}
+#cssmenu ul li.hover, #cssmenu ul li:hover {
+    position: relative;
+    z-index: 599;
+    cursor: default;
+}
+#cssmenu ul li.hover, #cssmenu ul li:hover {
+    cursor: default;
+}
+#cssmenu > ul > li a:hover {
+    background-color: #fff;
+    color: #ff3c20;
+}
+#cssmenu > ul > li:hover a {
+    background: #eee;
+        background-color: #fff;
+}
+#cssmenu > ul > li > a:hover {
+    color: #eee;
+}
+#cssmenu ul li:hover > ul {
+    visibility: visible;
+}
+#cssmenu ul li.hover, #cssmenu ul li:hover {
+    cursor: default;
+}
+#cssmenu ul ul li:hover > a {
+    background: #f9f9f9;
+    color: #ff3c20;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1439,3 +1597,230 @@ position: relative;
     position: absolute;
     display: inline-block;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#content ul.megamenu li .sub-menu {
+    z-index: 998;
+}
+#cssmenu ul.megamenu > li > .sub-menu {
+    left: 100%;
+    padding-top: 0px;
+    top: 0;
+}
+ul.megamenu > li > .sub-menu {
+    position: absolute;
+    z-index: 9999;
+    display: none;
+}
+#content #cssmenu ul.megamenu  .sub-menu .content {
+    padding: 0;
+}
+#content #cssmenu ul.megamenu > li > .sub-menu .content {
+    padding: 30px;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+}
+ul.megamenu li .sub-menu .content {
+    display: none;
+    padding: 20px;
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    box-sizing: content-box !important;
+    -moz-box-sizing: content-box !important;
+    -webkit-box-sizing: content-box !important;
+}
+#content #cssmenu ul.megamenu .sub-menu .content > .row {
+    padding-top: 5px;
+}
+ul.megamenu .sub-menu .content > .row {
+    padding-top: 20px;
+}
+#content #cssmenu ul.megamenu .item-vertical.style1 .categories {
+    padding: 15px 0 0 30px;
+}
+#content #cssmenu ul.megamenu .sub-menu .content .static-menu .menu ul {
+    padding-bottom: 0;
+}
+ul.megamenu li .sub-menu .content .static-menu .menu ul {
+    list-style: none;
+    margin: 0px;
+    padding: 5px 0px;
+        padding-bottom: 5px;
+}
+#content #cssmenu ul.megamenu .item-vertical.style1 .categories .static-menu .menu > ul > li {
+    margin-bottom: 0px;
+}
+#content #cssmenu ul.megamenu > li > .sub-menu .content .static-menu .menu > ul > li {
+    margin-bottom: 15px;
+}
+ul.megamenu li .sub-menu .content .static-menu > .menu > ul > li:first-child {
+    padding-top: 0px;
+}
+ul.megamenu li .sub-menu .content .static-menu > .menu > ul > li {
+    padding-top: 7px;
+}
+#content #cssmenu ul.megamenu > li > .sub-menu .content .static-menu .menu > ul li a.main-menu {
+    color: #222;
+    font-size: 14px;
+    font-size: 1.4rem;
+    margin: 0 0 0px;
+    display: block;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+}
+.megamenu-style-dev .vertical ul.megamenu .sub-menu .content .static-menu .menu ul li > a {
+    line-height: inherit;
+    padding-bottom: 0;
+    border-bottom: none;
+    min-height: auto;
+}
+ul.megamenu li .sub-menu .content .static-menu a.main-menu {
+    display: block;
+    font-weight: 400;
+    font-size: 16px;
+}
+#content #cssmenu ul.megamenu > li > .sub-menu .content .static-menu .menu > ul ul li {
+    padding: 0;
+    display: inline;
+}
+#content #cssmenu ul.megamenu > li > .sub-menu .content .static-menu .menu > ul ul li a {
+    font-size: 14px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    display: block;
+    line-height: 28px;
+}
+#content #cssmenu ul.megamenu  .img-vbanner {
+    padding-right: 15px;
+}
+#content #cssmenu ul.megamenu .img-vbanner a {
+    margin-bottom: 0px;
+    display: block;
+}
+#content #cssmenu:hover .vertical-wrapper {
+    visibility: visible;
+}
+.common-home .typeheader-1 .container-megamenu.vertical:hover .vertical-wrapper {
+    visibility: visible;
+}
+.typeheader-1 .container-megamenu.vertical:hover .vertical-wrapper {
+    visibility: visible;
+}
+.container-megamenu.vertical .vertical-wrapper ul.megamenu > li > .sub-menu .content .static-menu .menu > ul li a.main-menu {
+    color: #222;
+    font-size: 14px;
+    font-size: 1.4rem;
+    margin: 0 0 0px;
+    display: block;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: none;
+}
+.megamenu-style-dev .vertical ul.megamenu .sub-menu .content .static-menu .menu ul li > a {
+    line-height: inherit;
+    padding-bottom: 0;
+    border-bottom: none;
+    min-height: auto;
+}
+
+
+
+
+
+
+
+
+ul.categories li{
+    padding: 10px;
+    margin-left: 20px;
+    position: relative;
+    display: inline-block;
+    list-style: none;
+}
+ul.categories li a:hover{
+    color: #ff3c20;
+}
+.has-sub .mega-menu ul li {
+    float: right;
+    width: auto;
+    margin-left: 5px;
+}
+.has-sub .mega-menu ul li a {
+    display: block;
+    padding: 5px 5px;
+}
+.has-sub .mega-menuul li:hover .mega-menu {
+    display: block;
+    transition: all .5s ease-in;
+
+}
+
+.has-sub .mega-menu .menu-title {
+    font-size: 12pt;
+    color: black;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eaeaea;
+    text-transform: uppercase;
+    display: none;
+}
+.has-sub .mega-menu .menu-list > ul >li >a {
+    color: #666;
+    font-size: 11px;
+}
+.has-sub .mega-menu .menu-page{
+    width: 400px;
+}
+.has-sub .mega-menu .menu-list .menu-page > ul >li >a:hover{
+    color: #ff3c20;
+}
+.has-sub .mega-menu .menu-list > ul >li >a:hover{
+    color: #ff3c20;
+}
+.has-sub .mega-menu ul {
+    padding: 0;
+    margin: 0;
+}
+.has-sub .mega-menu  ul li {
+    float: right;
+    width: auto;
+}
+.has-sub .mega-menu .mega-menu ul li {
+    display: block;
+    width: 100% !important;
+}
+.has-sub .mega-menu ul li a {
+    padding: 0px !important;
+    display: block;
+}
+.has-sub .mega-menu{
+    display: none;
+    min-height: 150px;
+    min-width: 700px;
+    position: absolute;
+    background-color: white;
+    border: 1px solid white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    z-index: 592;
+    top: 0;
+    right:100%;
+}
+
