--- a/store/style10.css
+++ b/store/style10.css
@@ -31,7 +31,7 @@ a:hover{
     width: 100%;
 }
 .header .container{
-    margin-right: 60px;
+    margin-right: 30px;
     margin-left: 20px;
 }
 .header-top{
@@ -42,7 +42,7 @@ a:hover{
     margin-top: 10px;
 }
 .header-link{
-    font-size: 16px;
+    font-size: 15px;
 }
 li{
     list-style: none;
@@ -70,8 +70,8 @@ ul.megamenu li a:hover{
 .signin-link{
     padding-top: 10px;
 }
-.middle-left ul li{
-    padding-right: 115px;
+.middle-right ul li{
+    padding-right: 5px;
 }
 .all-category{
     border: 1px solid #ff3c20;
