store kamel edite slike 2 radifi

--- a/store/style10.css
+++ b/store/style10.css
@@ -1105,6 +1105,7 @@ padding:12px 0;
     text-align: center;
     background-color: #f8f8f8;
     min-height: 270px;
+    margin-bottom: 30px;
 }
 .item-new-product2 .product{
     text-align: center;
