--- a/store/style10.css
+++ b/store/style10.css
@@ -778,9 +778,78 @@ img{
 }
 .banner4{
     margin-top:20px;
-    margin-right: 20px;
+    margin-right: 10px;
     margin-bottom: 20px;
 }
+.banners6 a:before{
+    background-color: rgba(0, 0, 0, 0.2);
+    width:100%;
+    height: 100%;
+
+    top: 0;
+    left: 0;
+    position: absolute;
+    content: "";
+    transition: all 0.3 ease-in-out 0s;
+} 
+.banners6 a:hover:before{
+    width: 0;
+    top: 0;
+    left: 50%;
+}
+.banners3 a:before{
+    background-color: rgba(0, 0, 0, 0.2);
+    width:0;
+    left: 50%;
+    top: 0;
+    position: absolute;
+    content: "";
+    transition: all 0.3 ease-in-out 0s;
+} 
+.banners3 a:hover:before{
+    width:97%;
+    top: 35px;
+    left: 30px;
+    height: 43px;
+
+
+}
+.banner4 a::before {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 0;
+    top: 0;
+    left: 50%;
+    position: absolute;
+    content: "";
+    transition: all 0.3 ease-in-out 0s;
+}
+.banner4 a:hover:before{
+    width: 74%;
+    height: 91%;
+    top: 20px;
+    left: 61px;
+
+}
+.banner5 a::before {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 0;
+    top: 0;
+    left: 50%;
+    position: absolute;
+    content: "";
+    transition: all 0.3 ease-in-out 0s;
+}
+.banner5 a:hover::before {
+    width: 81%;
+    height: 100%;
+    top: 0px;
+    left: 43px;
+}
+
+
+
+
+
 
 
 
